--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,4 +1,7 @@
 
-{{!-- Starts the quiz--}}
-<a href="/game"><button type="button">Click Here to Start</button></a>
+{{!--Starts the quiz--}}
+<div class="leaderboard">
+    
+</div>
+<a href="/game"><button id="startGame" type="button">Click Here to Start</button></a>
 
