--- a/views/landing.hbs
+++ b/views/landing.hbs
@@ -1,5 +1,3 @@
-<form action="/" method="POST">
-    <label for="name">Please enter your name</label><br>
-    <input name="name" type="text">
-  <button type="submit">Submit</button>
-</form>
+
+
+<a href="/index"><button>Enter Game</button></a>
