--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -3,11 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/main.css"> 
     <title>Document</title>
 </head>
 <body>
-    {{{body}}}
-    {{> footer}}
+    
+    <div class = "container">
+        
+        <div class = "header">
+        {{> header}}
+        </div>
+
+        <div class = "body"> 
+        {{{body}}}
+        </div>
+
+        {{> footer}}
+
+    </div>        
+        <script src="js/game.js"></script>
 </body>
 </html>
 
