--- a/Public/css/main.css
+++ b/Public/css/main.css
@@ -1,7 +1,7 @@
 body{
   height: 100%;
   background-color: aqua;
-  font-family: 'Passion One', cursive;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .container {
